--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -191,8 +191,9 @@ button {
   background-image: url("../img/blocks.png");
   background-position: -160px 0;
 }
-#diamonddash #block_list .block.erasable {
-  opacity: 0.5;
+#diamonddash #block_list .block.erasable_hint {
+  -webkit-animation: hintEffect 1.0s infinite;
+  -webkit-animation-delay: 5.0s;
 }
 #diamonddash #block_list #id0_0 {
   left: 0px;
@@ -656,6 +657,19 @@ button {
   z-index: 4;
 }
 
+@-webkit-keyframes 'hintEffect' {
+  0% {
+    opacity: 1.0;
+  }
+
+  50% {
+    opacity: 0.4;
+  }
+
+  to {
+    opacity: 1.0;
+  }
+}
 @-webkit-keyframes 'expAnimation' {
   0% {
     background-position: 0px 0px;
