--- a/style.scss
+++ b/style.scss
@@ -172,8 +172,11 @@ button {
 			border: 0;
 			margin: -2px 0 -1px 0;
 			transition-property: top;
+            -webkit-transition-property: top;
 			transition-duration: 0.5s;
+            -webkit-transition-duration: 0.5s;
 			transition-timing-function: ease-in;
+            -webkit-transition-timing-function: ease-in;
 			position: absolute;
 			&.type_0 {
 				background-image: url('../img/blocks.png');
@@ -198,6 +201,9 @@ button {
 			&.erasable_hint {
 				-webkit-animation: hintEffect 1.0s infinite;
 			    -webkit-animation-delay: 5.0s;
+                &.paused {
+                  -webkit-animation-play-state: paused;
+                }
 			}
 		}
 		@for $x from 0 through 6 {
